--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -151,7 +151,7 @@
                             <li class="collection-header">
                                 <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
                                 <ul class="bullets">
-                                    <li>This program will run for ten sessions with each session lasting (1) hour</li>
+                                    <li>This program will run for seven sessions with each session lasting (1) hour</li>
                                     <li>The sessions are 1 on 1</li>
                                     <li>The program will cost $1,250 for the ten sessions</li>
                                 </ul>
