--- a/programs/college-counseling/index.html
+++ b/programs/college-counseling/index.html
@@ -176,7 +176,7 @@
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Summer College Counseling</h4>
                         <ul class="bullets">
-                            <li>This program will be five sessions with each session lasting (1) hour</li>
+                            <li>This program will be six sessions with each session lasting (1) hour</li>
                             <li>The sessions are 1 on 1</li>
                             <li>The program will cost $600 for the six sessions</li>
                         </ul>
