--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
     <!-- BEGIN SITE CONTENT -->
     <div class="container-fluid" id="home-content">
         <div class="row">
+        <div class="covid-19 col l8 m8 s12 offset-l2 offset-m2">
+            <H5 class="light center">Our COVID-19 Statement</H5>
+            <br>
+            <p>At Konjoian Education Center our team is preparing to help parents and students navigate through this new educational learning environment. We have designed a program to coordinate Aspen and Google Classroom information to produce periodic reporting to assist in keeping students current with their assignments and assessments. Supplemental subject tutoring will be available as needed. Contact us directly for more detailed information on how we can help create a plan to ensure academic success during the course of this unprecedented time.
+                <br><br>The Team at Konjoian Education Center</p>
+        </div>
+        </div>
+        <div class="row">
             <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
                 <h5 class="light">Flexible Scheduling</h5>
                 <div class="div-ider-color"></div>
