--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
-    <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
     <!-- Framework (null) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
@@ -47,7 +46,8 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <div class="navbar-fixed">
     <nav>
         <!-- DROPDOWN FOR PROGRAMS -->
@@ -65,6 +65,7 @@
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="desktop-size right hide-on-med-and-down">
+                <li><a href="#covid" class="modal-trigger"><i class="material-icons right" style="font-size: 25px">new_releases</i>COVID-19</a></li>
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
                 <li><a href="/contact/">Contact</a></li>
                 <li><a href="/testimonials/">Testimonials</a></li>
@@ -120,21 +121,13 @@
                     <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
                     <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script> <a href="#datmodal" class="btn black modal-trigger">Schedule</a>
                     <!-- Calendly link widget end -->
-                    <a href="testimonials/" class="btn-flat white-text">Testimonials</a> 
+                    <a href="testimonials/" class="btn-flat white-text">Testimonials</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- BEGIN SITE CONTENT -->
     <div class="container-fluid" id="home-content">
-        <div class="row">
-        <div class="covid-19 col l8 m8 s12 offset-l2 offset-m2">
-            <H5 class="light center">Our COVID-19 Statement</H5>
-            <br>
-            <p>At Konjoian Education Center our team is preparing to help parents and students navigate through this new educational learning environment. We have designed a program to coordinate Aspen and Google Classroom information to produce periodic reporting to assist in keeping students current with their assignments and assessments. Supplemental subject tutoring will be available as needed. Contact us directly for more detailed information on how we can help create a plan to ensure academic success during the course of this unprecedented time.
-                <br><br>The Team at Konjoian Education Center</p>
-        </div>
-        </div>
         <div class="row">
             <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
                 <h5 class="light">Flexible Scheduling</h5>
@@ -163,7 +156,8 @@
                     <div class="card-image" style="background-image:url(images/assets/IMG_2317.jpeg); background-size:cover; height:270px" aria-label="Subject Tutoring"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/subject-tutoring/index.html">Subject Tutoring</a></span>
                         <p>Sign up for specific subject tutoring for numerous subjects and AP course prep.</p>
-                        <br> <a href="programs/subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                        <br> <a href="programs/subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a>
+                    </div>
                 </div>
             </div>
             <div class="col m6">
@@ -171,7 +165,8 @@
                     <div class="card-image" style="background-image:url(images/assets/IMG_2312.jpeg); background-size:cover; height:270px" aria-label="Test Preparation"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
                         <p>Get started with test prep to see tremendous improvements in your test scores</p>
-                        <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                        <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a>
+                    </div>
                 </div>
             </div>
             <div class="col m6">
@@ -179,14 +174,16 @@
                     <div class="card-image" style="background-image:url(images/assets/IMG_2316.jpeg); background-size:cover; height:270px" aria-label="Study Skills"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/study-skills/">Study Skills</a></span>
                         <p>Get help with various school-related skills such as organization and time management.</p>
-                        <br> <a href="programs/study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                        <br> <a href="programs/study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a>
+                    </div>
                 </div>
             </div>
             <div class="col m6">
                 <div class="card">
                     <div class="card-image" style="background-image:url(images/assets/IMG_2308.jpeg); background-size:cover; height:270px" aria-label="College Counseling"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
-                        <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                        <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -199,6 +196,21 @@
             </div>
         </div>
     </footer>
+    <!-- COVID 19 MODAL -->
+    <div id="covid" class="modal">
+        <div class="modal-content">
+            <h5>Our COVID-19 Statement</h5>
+            <br>
+            <p>At Konjoian Education Center our team is preparing to help parents and students navigate through this new educational learning environment. We have designed a program to coordinate Aspen and Google Classroom information to produce periodic reporting to assist in keeping students current with their assignments and assessments. Supplemental subject tutoring will be available as needed. Contact us directly for more detailed information on how we can help create a plan to ensure academic success during the course of this unprecedented time.
+            <br><br>
+            The Team at Konjoian Education Center</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="modal-close waves-effect btn-flat">Close</a>
+        </div>
+    </div>
+
+
     <!-- Calendly Scheduling Modal -->
     <div id="datmodal" class="modal bottom-sheet">
         <div class="modal-content">
@@ -217,9 +229,9 @@
     <script src="javascript/init.js"></script>
     <script src="javascript/smoothscroll.js"></script>
     <script>
-        (function (i, s, o, g, r, a, m) {
+        (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
+            i[r] = i[r] || function() {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o), m = s.getElementsByTagName(o)[0];
