--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                         <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
                 </li>
                 <li>
+                    <ul class="collapsible collapsible-accordian">
+                         <li><a href="#covid" class="modal-trigger"><i class="material-icons right" style="font-size: 25px">new_releases</i>COVID-19</a></li>
+                    </ul>
+                </li>
+                <li>
                     <ul class="collapsible collapsible-accordion">
                         <li><a class="collapsible-header waves-effect" style="text-align: left">Programs</a>
                             <div class="collapsible-body">
