--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Konjoian Education Center</title>
+    <title>404 - Konjoian Education Services</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@ permalink: /404.html
     <header>
         <nav style="background:#fff !important">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo center">Konjoian Education Center</a>
+                <a href="#" class="brand-logo center">Konjoian Education Services</a>
                 <ul id="nav-mobile" class="left">
                     <li><a onclick="goBack()"><i class="material-icons">arrow_back</i></a></li>
 
@@ -42,7 +42,7 @@ permalink: /404.html
         </div>
         <div class="col s12 center">
             <br><br><br><br><br>
-            <p>Konjoian Education Center</p>
+            <p>Konjoian Education Services</p>
         </div>
     </div>
 </body>
