--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-48.png">
     <!-- Social Networking Meta-Data -->
     <!-- Twitter Card Summary -->
-    <meta name="twitter:card" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="twitter:card" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter Account Dedicated for Site -->
     <meta name="twitter:site" content="@KonjoianEd">
     <!-- Twitter Account for Site Owner -->
@@ -32,21 +32,21 @@
     <!-- Twitter/Facebook Site URL -->
     <meta property="og:url" content="http://konjoianeducationcenter.com">
     <!-- Twitter/Facebook Site Title -->
-    <meta property="og:title" content="Konjoian Education Center">
+    <meta property="og:title" content="Konjoian Education Services">
     <!-- Twitter/Facebook Site Description -->
-    <meta property="og:description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta property="og:description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter/Facebook Image Preview -->
     <meta property="og:image" content="images/assets/IMG_1416.JPG">
     <!-- Character Set -->
     <meta charset="UTF-8">
     <!-- Search Engine Optimization -->
     <!-- Description -->
-    <meta name="description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Keywords -->
     <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
-    <title>Konjoian Education Center</title>
+    <title>Konjoian Education Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
 <div class="navbar-fixed">
     <nav>
@@ -61,7 +61,7 @@
         </ul>
         <div class="nav-wrapper container-fluid">
             <!-- NAVIGATION SITE NAME -->
-            <a href="/home.html" class="brand-logo"><img src="images/favicons/yuge.png">onjoian Education Center</a>
+            <a href="/home.html" class="brand-logo"><img src="images/favicons/yuge.png">onjoian Education Services</a>
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="desktop-size right hide-on-med-and-down">
@@ -73,7 +73,7 @@
             <ul class="side-nav" id="mobile-demo">
                 <li>
                     <div class="userView"> <img class="background" src="/images/favicons/islam.png">
-                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
+                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Services</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
                 </li>
                 <li>
                     <ul class="collapsible collapsible-accordion">
@@ -111,7 +111,7 @@
         <div class="hero">
             <div class="hero-content">
                 <div class="col m6 s12">
-                    <h2 class="light" id="home-page-title">Konjoian Education Center</h2>
+                    <h2 class="light" id="home-page-title">Konjoian Education Services</h2>
                     <h6 class="l200"><i>An Easier Way to Succeed</i></h6>
                     <br>
                     <br>
@@ -185,7 +185,7 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Services</span> </div>
                 <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="sitemap.html">Sitemap</a></div>
             </div>
         </div>
