--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-48.png">
     <!-- Social Networking Meta-Data -->
     <!-- Twitter Card Summary -->
-    <meta name="twitter:card" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="twitter:card" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter Account Dedicated for Site -->
     <meta name="twitter:site" content="">
     <!-- Twitter Account for Site Owner -->
@@ -31,16 +31,16 @@
     <!-- Twitter/Facebook Site URL -->
     <meta property="og:url" content="http://konjoianeducationcenter.com">
     <!-- Twitter/Facebook Site Title -->
-    <meta property="og:title" content="Konjoian Education Center">
+    <meta property="og:title" content="Konjoian Education Services">
     <!-- Twitter/Facebook Site Description -->
-    <meta property="og:description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta property="og:description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter/Facebook Image Preview -->
     <meta property="og:image" content="images/assets/IMG_1416.JPG">
     <!-- Character Set -->
     <meta charset="UTF-8">
     <!-- Search Engine Optimization -->
     <!-- Description -->
-    <meta name="description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Keywords -->
     <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
@@ -53,7 +53,7 @@
         <!-- grey section above navigation -->
         <div class="container-fluid">
             <a href="/index.html">
-                <h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4>
+                <h4 class="header-text white-text">Konjoian Education Services <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4>
             </a>
         </div>
     </div>
@@ -70,7 +70,7 @@
         </ul>
         <div class="nav-wrapper container-fluid">
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
+            <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Services</a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="hide-on-med-and-down">
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
@@ -85,7 +85,7 @@
             <ul class="side-nav" id="mobile-demo">
                 <li>
                     <div class="userView"> <img class="background" src="/images/favicons/islam.png">
-                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
+                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Services</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
                 </li>
                 <li>
                     <ul class="collapsible collapsible-accordion">
@@ -263,23 +263,11 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Services</span> </div>
                 <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="/sitemap.html">Sitemap</a></div>
             </div>
         </div>
     </footer>
-    <!-- Calendly Scheduling Modal -->
-    <div id="datmodal" class="modal bottom-sheet">
-        <div class="modal-content">
-            <h4>Schedule a Session<i class="material-icons right modal-action modal-close">close</i></h4>
-            <br>
-            <br>
-            <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/konjoian/session" style="min-width:320px;height:580px;"></div>
-            <script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
-            <!-- Calendly inline widget end -->
-        </div>
-    </div>
     <!-- Keep JQuery First to Avoid Bugs -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
