--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-48.png">
     <!-- Social Networking Meta-Data -->
     <!-- Twitter Card Summary -->
-    <meta name="twitter:card" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="twitter:card" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter Account Dedicated for Site -->
     <meta name="twitter:site" content="">
     <!-- Twitter Account for Site Owner -->
@@ -31,27 +31,27 @@
     <!-- Twitter/Facebook Site URL -->
     <meta property="og:url" content="http://konjoianeducationcenter.com">
     <!-- Twitter/Facebook Site Title -->
-    <meta property="og:title" content="Konjoian Education Center">
+    <meta property="og:title" content="Konjoian Education Services">
     <!-- Twitter/Facebook Site Description -->
-    <meta property="og:description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta property="og:description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Twitter/Facebook Image Preview -->
     <meta property="og:image" content="images/assets/IMG_1416.JPG">
     <!-- Character Set -->
     <meta charset="UTF-8">
     <!-- Search Engine Optimization -->
     <!-- Description -->
-    <meta name="description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
+    <meta name="description" content="The Konjoian Education Services is focused on creating an easier way to succeed.">
     <!-- Keywords -->
     <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
-    <title>Konjoian Education Center</title>
+    <title>Konjoian Education Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
         <!-- grey section above navigation -->
-        <div class="container-fluid"> <a href="/index.html"><h4 class="header-text white-text">Konjoian Education Center <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4></a> </div>
+        <div class="container-fluid"> <a href="/index.html"><h4 class="header-text white-text">Konjoian Education Services <small style="font-family: 'Roboto';font-size: .45em">&nbsp; "An Easier Way to Succeed"</small></h4></a> </div>
     </div>
     <!-- end grey section -->
     <nav class="z-depth-0">
@@ -66,7 +66,7 @@
         </ul>
         <div class="nav-wrapper container-fluid">
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
+            <a href="/index.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Services</a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="hide-on-med-and-down">
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
@@ -81,7 +81,7 @@
             <ul class="side-nav" id="mobile-demo">
                 <li>
                     <div class="userView"> <img class="background" src="/images/favicons/islam.png">
-                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
+                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Services</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
                 </li>
                 <li>
                     <ul class="collapsible collapsible-accordion">
@@ -210,7 +210,7 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Services</span> </div>
                 <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="/sitemap.html">Sitemap</a></div>
             </div>
         </div>
