update icon font

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <!-- Framework (null) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
@@ -125,17 +126,17 @@
     <!-- BEGIN SITE CONTENT -->
     <div class="container-fluid" id="home-content">
         <div class="row">
-            <div class="col m4 center"> <img class="center-block responsive-img" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" src="https://maxcdn.icons8.com/Color/PNG/96/Time_And_Date/date_to-96.png" width="58">
+            <div class="col m4 center"> <i class="fi fi-rr-calendar" style="font-size: 50px"></i>
                 <h5 class="light">Flexible Scheduling</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">We know how busy your schedule can be. That's why we work to schedule time that suits your needs.</p>
             </div>
-            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Very_Basic/info-96.png" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" width="58">
+            <div class="col m4 center"> <i class="fi fi-rr-graduation-cap" style="font-size: 50px"></i>
                 <h5 class="light">Informative</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">Learn about the college admissions process and individual subjects.</p>
             </div>
-            <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Users/student_male-96.png" title="https://icons8.com - Icon pack by Icons8" aria-hidden="true" width="58">
+            <div class="col m4 center"> <i class="fi fi-rr-tachometer-alt-slow" style="font-size: 50px"></i>
                 <h5 class="light">Tailored to You</h5>
                 <div class="div-ider-color"></div>
                 <p class="grey-text 500">We tailor our studies to what you as individual need in order to make you successful.</p>
