update intro information

--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -133,7 +133,9 @@
             <div class="intro-card">
                 <div class="card-panel">
                     <h4 class="light">Study Skills</h4>
-                    <h6 class="grey-text text-darken-2 flow-text">Studying is an essential part of your school career. There are also many methods and skills required for studying. We offer programs to help you with time management and organizational skills. The regular program has two parts (listed separately below) and there is another one-part program for middle school.</h6>
+                    <p class="grey-text text-darken-2 flow-text" style="font-size: 16px">Study skills is an individualized service designed to assist students with goal setting, time management & organization. While academic coaching includes elements of traditional tutoring and addressing executive function, the goals and process of study skills are more focused towards teaching students to be improved learners.
+                    <br><br>
+                        For some students, academic problems stem not from a lack of intellectual understanding of specific subject material but instead from a lack of skills or strategies that can be employed to address schoolwork. Additionally, the migration of academics and learning to online platforms has created an entire array of new challenges. In a study skills session, skills such as planning, prioritizing, scheduling, task initiation and balancing daily responsibilities with more long-term goals and assignments are developed with the student. Once students have access to these strategies and begin to establish successful patterns, classes and assignments become more manageable and less stressful. Within the framework of study skills, we will also surveil all subject areas, including the monitoring of online learning portals such as Google Classroom, Schoology & Aspen. This enables early identification of potential subject area deficiencies.</p>
                 </div>
                 <div class="row">
                     <div class="col s12">
